// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v3 golden runy nad reálným obsahem > seed 7, kompetentni, 4 hráči, Brody 1`] = `
[
  {
    "cile": [
      {
        "cil": "bez-jizvy",
        "hrac_id": "bartos",
      },
      {
        "cil": "kupecke-slovo",
        "hrac_id": "kowalski",
      },
      {
        "cil": "muj-den",
        "hrac_id": "mazur",
      },
      {
        "cil": "dve-jizvy",
        "hrac_id": "fontana",
      },
    ],
    "loadout": [
      [],
      [],
      [],
      [],
    ],
    "nodeIndex": 0,
    "pocetHracu": 4,
    "pronasledovatel": "serif-brody",
    "ruce": [
      {
        "hrac_id": "bartos",
        "karty": [
          "dedeckova-brokovnice",
          "damsky-revolver",
          "lopata",
        ],
        "velikost": 3,
      },
      {
        "hrac_id": "kowalski",
        "karty": [
          "knezsky-kolarek",
          "konselov-prsten",
          "otrleny-vyraz",
        ],
        "velikost": 3,
      },
      {
        "hrac_id": "mazur",
        "karty": [
          "dedkuv-kabat",
          "pytel-cementu",
          "zlate-hodinky",
        ],
        "velikost": 3,
      },
      {
        "hrac_id": "fontana",
        "karty": [
          "stribrna-placatka",
          "svarecka",
          "uriznuta-hlaven",
        ],
        "velikost": 3,
      },
    ],
    "rusi": {
      "cil": "GANGSTER",
      "typ": "stitek",
    },
    "seed": 7,
    "seq": 1,
    "startBeden": 6,
    "startKreditu": 0,
    "startZar": 0,
    "type": "run_started",
    "verzeObsahu": "bc2bd34c",
    "verzePravidel": "v0.3 / prototyp-mvp.md 2026-07-23 (slotová resoluce v3; výchozí čísla — ladit simulací)",
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "deputy-mytnice",
        "typ_mista": "npc",
      },
      {
        "ref": "mesto-ulicka",
        "typ_mista": "npc",
      },
    ],
    "nodeIndex": 1,
    "seq": 2,
    "type": "map_move",
  },
  {
    "nodeIndex": 1,
    "seq": 3,
    "typ_mista": "npc",
    "type": "map_move",
    "volba": "mesto-ulicka",
  },
  {
    "nevidi": [],
    "nodeIndex": 1,
    "seq": 4,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "obrana",
        },
        {
          "slot_index": 1,
          "stat": "improvizace",
        },
        {
          "slot_index": 2,
          "stat": "utok",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "obrana",
        },
        {
          "slot_index": 1,
          "stat": "improvizace",
        },
        {
          "slot_index": 2,
          "stat": "utok",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "dedeckova-brokovnice",
        "staty": {
          "hodnota": 1,
          "improvizace": 1,
          "nastroj": 1,
          "obrana": 2,
          "utok": 5,
        },
        "stitky": [
          "GANGSTER",
        ],
      },
      {
        "dobrovolna": true,
        "hrac_id": "kowalski",
        "karta_id": "knezsky-kolarek",
        "staty": {
          "hodnota": 1,
          "improvizace": 4,
          "nastroj": 0,
          "obrana": 2,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "mazur",
        "karta_id": "pytel-cementu",
        "staty": {
          "hodnota": 1,
          "improvizace": 2,
          "nastroj": 1,
          "obrana": 3,
          "utok": 3,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "fontana",
        "karta_id": "uriznuta-hlaven",
        "staty": {
          "hodnota": 1,
          "improvizace": 1,
          "nastroj": 0,
          "obrana": 1,
          "utok": 4,
        },
        "stitky": [
          "GANGSTER",
        ],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 1,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 1,
      },
      {
        "hrac_id": "kowalski",
        "pocet": 1,
      },
      {
        "hrac_id": "mazur",
        "pocet": 1,
      },
      {
        "hrac_id": "fontana",
        "pocet": 1,
      },
    ],
    "seq": 5,
    "type": "commit",
  },
  {
    "nodeIndex": 1,
    "seq": 6,
    "sloty": [
      {
        "kotva": 3,
        "prah": 2,
        "role": "Držet nervy",
        "slot_index": 0,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Zamluvit to",
        "slot_index": 1,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Zastrašit gestem",
        "slot_index": 2,
        "stat": "utok",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 2,
        "role": "Najít skulinu",
        "slot_index": 3,
        "stat": "nastroj",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "npc",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 1,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "dedeckova-brokovnice",
        "slot_index": 2,
      },
      {
        "hrac_id": "kowalski",
        "karta_id": "knezsky-kolarek",
        "slot_index": 1,
      },
      {
        "hrac_id": "mazur",
        "karta_id": "pytel-cementu",
        "slot_index": 0,
      },
      {
        "hrac_id": "fontana",
        "karta_id": "uriznuta-hlaven",
        "slot_index": 3,
      },
    ],
    "seq": 7,
    "souhlasili": [
      "bartos",
      "kowalski",
      "mazur",
      "fontana",
    ],
    "type": "assignment",
  },
  {
    "duvod": "proslo",
    "hrac_id": "mazur",
    "karta_id": "pytel-cementu",
    "nodeIndex": 1,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 8,
    "slot_index": 0,
    "stat": "obrana",
    "stat_hodnota": 3,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "kowalski",
    "karta_id": "knezsky-kolarek",
    "nodeIndex": 1,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 9,
    "slot_index": 1,
    "stat": "improvizace",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "gangster_auto_fail",
    "hrac_id": "bartos",
    "karta_id": "dedeckova-brokovnice",
    "nodeIndex": 1,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 10,
    "slot_index": 2,
    "stat": "utok",
    "stat_hodnota": 0,
    "stitek_efekt": "auto_fail",
    "stitky": [
      "GANGSTER",
    ],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": false,
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "fontana",
    "karta_id": "uriznuta-hlaven",
    "nodeIndex": 1,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 11,
    "slot_index": 3,
    "stat": "nastroj",
    "stat_hodnota": 0,
    "stitek_efekt": null,
    "stitky": [
      "GANGSTER",
    ],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": false,
  },
  {
    "gap": 0,
    "max_achievable_band": "2/4_S_NASLEDKY",
    "max_achievable_zasahy": 2,
    "naklad_ztrata": 0,
    "nodeIndex": 1,
    "pasmo": "2/4_S_NASLEDKY",
    "seq": 12,
    "type": "band_resolved",
    "zasahy": 2,
    "zbyva_beden": 6,
  },
  {
    "delta": 2,
    "duvod": "hlucne_GANGSTER",
    "nodeIndex": 1,
    "nova_pozice": 2,
    "prah_prekrocen": null,
    "seq": 13,
    "type": "zar_move",
  },
  {
    "delta": 2,
    "duvod": "hlucne_GANGSTER",
    "nodeIndex": 1,
    "nova_pozice": 4,
    "prah_prekrocen": null,
    "seq": 14,
    "type": "zar_move",
  },
  {
    "delta": 1,
    "duvod": "s_nasledky",
    "nodeIndex": 1,
    "nova_pozice": 5,
    "prah_prekrocen": null,
    "seq": 15,
    "type": "zar_move",
  },
  {
    "aktivnich_po": 0,
    "efekt": {
      "druh": "ztrata_karty",
      "kolik": 1,
    },
    "hrac_id": "bartos",
    "kategorie": "ztratovy",
    "nodeIndex": 1,
    "postih_id": "utrzena-kapsa",
    "pricina": "2/4_S_NASLEDKY",
    "seq": 16,
    "tier": "lehky",
    "type": "penalty_added",
    "vyprsi_za": "ihned",
  },
  {
    "byl_zatah": true,
    "nabidnuto": [
      {
        "ref": "zatah",
        "typ_mista": "zatah",
      },
    ],
    "nodeIndex": 2,
    "seq": 17,
    "type": "map_move",
  },
  {
    "nodeIndex": 2,
    "seq": 18,
    "typ_mista": "zatah",
    "type": "map_move",
    "volba": "zatah",
  },
  {
    "nevidi": [],
    "nodeIndex": 2,
    "seq": 19,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "utok",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
        {
          "slot_index": 2,
          "stat": "improvizace",
        },
      ],
      "zbran_projde": "ano",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "utok",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
        {
          "slot_index": 2,
          "stat": "improvizace",
        },
      ],
      "zbran_projde": "ano",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "damsky-revolver",
        "staty": {
          "hodnota": 2,
          "improvizace": 2,
          "nastroj": 0,
          "obrana": 1,
          "utok": 3,
        },
        "stitky": [
          "GANGSTER",
        ],
      },
      {
        "dobrovolna": true,
        "hrac_id": "kowalski",
        "karta_id": "mosazny-boxer",
        "staty": {
          "hodnota": 0,
          "improvizace": 1,
          "nastroj": 1,
          "obrana": 2,
          "utok": 4,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "mazur",
        "karta_id": "dedkuv-kabat",
        "staty": {
          "hodnota": 1,
          "improvizace": 2,
          "nastroj": 2,
          "obrana": 3,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "fontana",
        "karta_id": "svarecka",
        "staty": {
          "hodnota": 1,
          "improvizace": 1,
          "nastroj": 5,
          "obrana": 1,
          "utok": 1,
        },
        "stitky": [],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 2,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 1,
      },
      {
        "hrac_id": "kowalski",
        "pocet": 1,
      },
      {
        "hrac_id": "mazur",
        "pocet": 1,
      },
      {
        "hrac_id": "fontana",
        "pocet": 1,
      },
    ],
    "seq": 20,
    "type": "commit",
  },
  {
    "nodeIndex": 2,
    "seq": 21,
    "sloty": [
      {
        "kotva": 4,
        "prah": 4,
        "role": "Prorazit blokádu",
        "slot_index": 0,
        "stat": "utok",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Strhnout do postranní",
        "slot_index": 1,
        "stat": "nastroj",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 2,
        "role": "Zmizet v ulicích",
        "slot_index": 2,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 3,
        "role": "Držet nervy u okna",
        "slot_index": 3,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "zatah",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 2,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "damsky-revolver",
        "slot_index": 2,
      },
      {
        "hrac_id": "kowalski",
        "karta_id": "mosazny-boxer",
        "slot_index": 0,
      },
      {
        "hrac_id": "mazur",
        "karta_id": "dedkuv-kabat",
        "slot_index": 3,
      },
      {
        "hrac_id": "fontana",
        "karta_id": "svarecka",
        "slot_index": 1,
      },
    ],
    "seq": 22,
    "souhlasili": [
      "bartos",
      "kowalski",
      "mazur",
      "fontana",
    ],
    "type": "assignment",
  },
  {
    "duvod": "proslo",
    "hrac_id": "kowalski",
    "karta_id": "mosazny-boxer",
    "nodeIndex": 2,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 23,
    "slot_index": 0,
    "stat": "utok",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "fontana",
    "karta_id": "svarecka",
    "nodeIndex": 2,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 24,
    "slot_index": 1,
    "stat": "nastroj",
    "stat_hodnota": 5,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "damsky-revolver",
    "nodeIndex": 2,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 25,
    "slot_index": 2,
    "stat": "improvizace",
    "stat_hodnota": 2,
    "stitek_efekt": null,
    "stitky": [
      "GANGSTER",
    ],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "mazur",
    "karta_id": "dedkuv-kabat",
    "nodeIndex": 2,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 26,
    "slot_index": 3,
    "stat": "obrana",
    "stat_hodnota": 3,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": true,
  },
  {
    "gap": 0,
    "max_achievable_band": "4/4_HLADCE_LOOT",
    "max_achievable_zasahy": 4,
    "naklad_ztrata": 0,
    "nodeIndex": 2,
    "pasmo": "4/4_HLADCE_LOOT",
    "seq": 27,
    "type": "band_resolved",
    "zasahy": 4,
    "zbyva_beden": 6,
  },
  {
    "delta": 2,
    "duvod": "hlucne_GANGSTER",
    "nodeIndex": 2,
    "nova_pozice": 7,
    "prah_prekrocen": null,
    "seq": 28,
    "type": "zar_move",
  },
  {
    "delta": 1,
    "duvod": "hlucne_utok",
    "nodeIndex": 2,
    "nova_pozice": 8,
    "prah_prekrocen": null,
    "seq": 29,
    "type": "zar_move",
  },
  {
    "delta": 2,
    "duvod": "hladce_loot",
    "nodeIndex": 2,
    "seq": 30,
    "type": "credit_flow",
    "zustatek": 2,
  },
  {
    "nevidi": [],
    "nodeIndex": 3,
    "seq": 31,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": "hodnota",
        },
        {
          "slot_index": 2,
          "stat": "obrana",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": "hodnota",
        },
        {
          "slot_index": 2,
          "stat": "obrana",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "rodinne-stribro",
        "staty": {
          "hodnota": 4,
          "improvizace": 1,
          "nastroj": 1,
          "obrana": 2,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "kowalski",
        "karta_id": "konselov-prsten",
        "staty": {
          "hodnota": 5,
          "improvizace": 1,
          "nastroj": 0,
          "obrana": 2,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "mazur",
        "karta_id": "zlate-hodinky",
        "staty": {
          "hodnota": 5,
          "improvizace": 2,
          "nastroj": 1,
          "obrana": 1,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "fontana",
        "karta_id": "stribrna-placatka",
        "staty": {
          "hodnota": 3,
          "improvizace": 3,
          "nastroj": 1,
          "obrana": 1,
          "utok": 0,
        },
        "stitky": [],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 3,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 1,
      },
      {
        "hrac_id": "kowalski",
        "pocet": 1,
      },
      {
        "hrac_id": "mazur",
        "pocet": 1,
      },
      {
        "hrac_id": "fontana",
        "pocet": 1,
      },
    ],
    "seq": 32,
    "type": "commit",
  },
  {
    "nodeIndex": 3,
    "seq": 33,
    "sloty": [
      {
        "kotva": 3,
        "prah": 3,
        "role": "Uklidnit dav",
        "slot_index": 0,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Přimazat dlaň",
        "slot_index": 1,
        "stat": "hodnota",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 3,
        "role": "Kamenná tvář",
        "slot_index": 2,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Kdyby padl výstřel",
        "slot_index": 3,
        "stat": "utok",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "lecka",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 3,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "rodinne-stribro",
        "slot_index": 2,
      },
      {
        "hrac_id": "kowalski",
        "karta_id": "konselov-prsten",
        "slot_index": 3,
      },
      {
        "hrac_id": "mazur",
        "karta_id": "zlate-hodinky",
        "slot_index": 1,
      },
      {
        "hrac_id": "fontana",
        "karta_id": "stribrna-placatka",
        "slot_index": 0,
      },
    ],
    "seq": 34,
    "souhlasili": [
      "bartos",
      "kowalski",
      "mazur",
      "fontana",
    ],
    "type": "assignment",
  },
  {
    "duvod": "proslo",
    "hrac_id": "fontana",
    "karta_id": "stribrna-placatka",
    "nodeIndex": 3,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 35,
    "slot_index": 0,
    "stat": "improvizace",
    "stat_hodnota": 3,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "mazur",
    "karta_id": "zlate-hodinky",
    "nodeIndex": 3,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 36,
    "slot_index": 1,
    "stat": "hodnota",
    "stat_hodnota": 5,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "bartos",
    "karta_id": "rodinne-stribro",
    "nodeIndex": 3,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 37,
    "slot_index": 2,
    "stat": "obrana",
    "stat_hodnota": 2,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": false,
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "kowalski",
    "karta_id": "konselov-prsten",
    "nodeIndex": 3,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 38,
    "slot_index": 3,
    "stat": "utok",
    "stat_hodnota": 0,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": false,
  },
  {
    "gap": 0,
    "max_achievable_band": "2/4_S_NASLEDKY",
    "max_achievable_zasahy": 2,
    "naklad_ztrata": 0,
    "nodeIndex": 3,
    "pasmo": "2/4_S_NASLEDKY",
    "seq": 39,
    "type": "band_resolved",
    "zasahy": 2,
    "zbyva_beden": 6,
  },
  {
    "delta": 1,
    "duvod": "s_nasledky",
    "nodeIndex": 3,
    "nova_pozice": 9,
    "prah_prekrocen": null,
    "seq": 40,
    "type": "zar_move",
  },
  {
    "aktivnich_po": 0,
    "efekt": {
      "druh": "ztrata_naklad",
      "kolik": 1,
    },
    "hrac_id": "bartos",
    "kategorie": "ztratovy",
    "nodeIndex": 3,
    "postih_id": "vysypana-bedna",
    "pricina": "2/4_S_NASLEDKY",
    "seq": 41,
    "tier": "lehky",
    "type": "penalty_added",
    "vyprsi_za": "ihned",
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "truhla-preklad",
        "typ_mista": "truhla",
      },
      {
        "ref": "truhla-utopenec",
        "typ_mista": "truhla",
      },
    ],
    "nodeIndex": 4,
    "seq": 42,
    "type": "map_move",
  },
  {
    "nodeIndex": 4,
    "seq": 43,
    "typ_mista": "truhla",
    "type": "map_move",
    "volba": "truhla-preklad",
  },
  {
    "delta": 6,
    "duvod": "truhla",
    "nodeIndex": 4,
    "seq": 44,
    "type": "credit_flow",
    "zustatek": 8,
  },
  {
    "motel_odbocka": {
      "volba": "dal",
    },
    "nodeIndex": 4,
    "seq": 45,
    "type": "map_move",
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "nadrazi-vypravci",
        "typ_mista": "npc",
      },
      {
        "ref": "rival-parley",
        "typ_mista": "npc",
      },
    ],
    "nodeIndex": 5,
    "seq": 46,
    "type": "map_move",
  },
  {
    "nodeIndex": 5,
    "seq": 47,
    "typ_mista": "npc",
    "type": "map_move",
    "volba": "rival-parley",
  },
  {
    "nevidi": [],
    "nodeIndex": 5,
    "seq": 48,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "hodnota",
        },
        {
          "slot_index": 1,
          "stat": "improvizace",
        },
        {
          "slot_index": 2,
          "stat": "obrana",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "hodnota",
        },
        {
          "slot_index": 1,
          "stat": "improvizace",
        },
        {
          "slot_index": 2,
          "stat": "obrana",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "balik-bankovek",
        "staty": {
          "hodnota": 5,
          "improvizace": 1,
          "nastroj": 0,
          "obrana": 2,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "kowalski",
        "karta_id": "otrleny-vyraz",
        "staty": {
          "hodnota": 1,
          "improvizace": 2,
          "nastroj": 0,
          "obrana": 4,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "mazur",
        "karta_id": "bedna-kanadske",
        "staty": {
          "hodnota": 4,
          "improvizace": 1,
          "nastroj": 1,
          "obrana": 1,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "fontana",
        "karta_id": "slzy-na-povel",
        "staty": {
          "hodnota": 1,
          "improvizace": 4,
          "nastroj": 0,
          "obrana": 2,
          "utok": 0,
        },
        "stitky": [],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 5,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 1,
      },
      {
        "hrac_id": "kowalski",
        "pocet": 1,
      },
      {
        "hrac_id": "mazur",
        "pocet": 1,
      },
      {
        "hrac_id": "fontana",
        "pocet": 1,
      },
    ],
    "seq": 49,
    "type": "commit",
  },
  {
    "nodeIndex": 5,
    "seq": 50,
    "sloty": [
      {
        "kotva": 3,
        "prah": 4,
        "role": "Peníze na stůl",
        "slot_index": 0,
        "stat": "hodnota",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 3,
        "role": "Uhlazená řeč",
        "slot_index": 1,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 1,
        "role": "Nedat se zastrašit",
        "slot_index": 2,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 2,
        "role": "Kdyby úsměv zmizel",
        "slot_index": 3,
        "stat": "utok",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "npc",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 5,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "balik-bankovek",
        "slot_index": 0,
      },
      {
        "hrac_id": "kowalski",
        "karta_id": "otrleny-vyraz",
        "slot_index": 2,
      },
      {
        "hrac_id": "mazur",
        "karta_id": "bedna-kanadske",
        "slot_index": 3,
      },
      {
        "hrac_id": "fontana",
        "karta_id": "slzy-na-povel",
        "slot_index": 1,
      },
    ],
    "seq": 51,
    "souhlasili": [
      "bartos",
      "kowalski",
      "mazur",
      "fontana",
    ],
    "type": "assignment",
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "balik-bankovek",
    "nodeIndex": 5,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 52,
    "slot_index": 0,
    "stat": "hodnota",
    "stat_hodnota": 5,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "fontana",
    "karta_id": "slzy-na-povel",
    "nodeIndex": 5,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 53,
    "slot_index": 1,
    "stat": "improvizace",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "kowalski",
    "karta_id": "otrleny-vyraz",
    "nodeIndex": 5,
    "prah": 1,
    "pronasledovatel_efekt": null,
    "seq": 54,
    "slot_index": 2,
    "stat": "obrana",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "mazur",
    "karta_id": "bedna-kanadske",
    "nodeIndex": 5,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 55,
    "slot_index": 3,
    "stat": "utok",
    "stat_hodnota": 1,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": false,
  },
  {
    "gap": 0,
    "max_achievable_band": "3/4_HLADCE",
    "max_achievable_zasahy": 3,
    "naklad_ztrata": 0,
    "nodeIndex": 5,
    "pasmo": "3/4_HLADCE",
    "seq": 56,
    "type": "band_resolved",
    "zasahy": 3,
    "zbyva_beden": 5,
  },
  {
    "delta": 1,
    "duvod": "hladce",
    "nodeIndex": 5,
    "seq": 57,
    "type": "credit_flow",
    "zustatek": 9,
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "farmar-stodola",
        "typ_mista": "lokace",
      },
      {
        "ref": "rival-prepad",
        "typ_mista": "npc",
      },
    ],
    "nodeIndex": 6,
    "seq": 58,
    "type": "map_move",
  },
  {
    "nodeIndex": 6,
    "seq": 59,
    "typ_mista": "lokace",
    "type": "map_move",
    "volba": "farmar-stodola",
  },
  {
    "nevidi": [],
    "nodeIndex": 6,
    "seq": 60,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": [
            "nastroj",
            "improvizace",
          ],
        },
        {
          "slot_index": 2,
          "stat": "nastroj",
        },
      ],
      "zbran_projde": "ano",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": [
            "nastroj",
            "improvizace",
          ],
        },
        {
          "slot_index": 2,
          "stat": "nastroj",
        },
      ],
      "zbran_projde": "ano",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "kastrol-na-hlave",
        "staty": {
          "hodnota": 0,
          "improvizace": 3,
          "nastroj": 0,
          "obrana": 4,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "kowalski",
        "karta_id": "hovezi-vyvar",
        "staty": {
          "hodnota": 1,
          "improvizace": 4,
          "nastroj": 1,
          "obrana": 2,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "mazur",
        "karta_id": "petrolejova-lampa",
        "staty": {
          "hodnota": 0,
          "improvizace": 2,
          "nastroj": 3,
          "obrana": 1,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "fontana",
        "karta_id": "stary-kompas",
        "staty": {
          "hodnota": 1,
          "improvizace": 3,
          "nastroj": 3,
          "obrana": 1,
          "utok": 0,
        },
        "stitky": [],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 6,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 1,
      },
      {
        "hrac_id": "kowalski",
        "pocet": 1,
      },
      {
        "hrac_id": "mazur",
        "pocet": 1,
      },
      {
        "hrac_id": "fontana",
        "pocet": 1,
      },
    ],
    "seq": 61,
    "type": "commit",
  },
  {
    "nodeIndex": 6,
    "seq": 62,
    "sloty": [
      {
        "kotva": 3,
        "prah": 4,
        "role": "Utišit psy",
        "slot_index": 0,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 2,
        "role": "Zaklínit vrata",
        "slot_index": 1,
        "stat": [
          "nastroj",
          "improvizace",
        ],
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "kombi_oba",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Schovat bednu do sena",
        "slot_index": 2,
        "stat": "nastroj",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 2,
        "role": "Nedýchat, když jde kolem",
        "slot_index": 3,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "lokace",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 6,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "kastrol-na-hlave",
        "slot_index": 3,
      },
      {
        "hrac_id": "kowalski",
        "karta_id": "hovezi-vyvar",
        "slot_index": 0,
      },
      {
        "hrac_id": "mazur",
        "karta_id": "petrolejova-lampa",
        "slot_index": 2,
      },
      {
        "hrac_id": "fontana",
        "karta_id": "stary-kompas",
        "slot_index": 1,
      },
    ],
    "seq": 63,
    "souhlasili": [
      "bartos",
      "kowalski",
      "mazur",
      "fontana",
    ],
    "type": "assignment",
  },
  {
    "duvod": "proslo",
    "hrac_id": "kowalski",
    "karta_id": "hovezi-vyvar",
    "nodeIndex": 6,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 64,
    "slot_index": 0,
    "stat": "improvizace",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "fontana",
    "karta_id": "stary-kompas",
    "nodeIndex": 6,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 65,
    "slot_index": 1,
    "stat": [
      "nastroj",
      "improvizace",
    ],
    "stat_hodnota": [
      3,
      3,
    ],
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "kombi_oba",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "mazur",
    "karta_id": "petrolejova-lampa",
    "nodeIndex": 6,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 66,
    "slot_index": 2,
    "stat": "nastroj",
    "stat_hodnota": 3,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": false,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "kastrol-na-hlave",
    "nodeIndex": 6,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 67,
    "slot_index": 3,
    "stat": "obrana",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": true,
  },
  {
    "gap": 0,
    "max_achievable_band": "3/4_HLADCE",
    "max_achievable_zasahy": 3,
    "naklad_ztrata": 0,
    "nodeIndex": 6,
    "pasmo": "3/4_HLADCE",
    "seq": 68,
    "type": "band_resolved",
    "zasahy": 3,
    "zbyva_beden": 5,
  },
  {
    "delta": 1,
    "duvod": "hladce",
    "nodeIndex": 6,
    "seq": 69,
    "type": "credit_flow",
    "zustatek": 10,
  },
  {
    "motel_odbocka": {
      "volba": "dal",
    },
    "nodeIndex": 6,
    "seq": 70,
    "type": "map_move",
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "farmar-brod",
        "typ_mista": "npc",
      },
      {
        "ref": "urednik-razitko",
        "typ_mista": "npc",
      },
    ],
    "nodeIndex": 7,
    "seq": 71,
    "type": "map_move",
  },
  {
    "nodeIndex": 7,
    "seq": 72,
    "typ_mista": "npc",
    "type": "map_move",
    "volba": "urednik-razitko",
  },
  {
    "nevidi": [],
    "nodeIndex": 7,
    "seq": 73,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
        {
          "slot_index": 2,
          "stat": "hodnota",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
        {
          "slot_index": 2,
          "stat": "hodnota",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "pytel-brambor",
        "staty": {
          "hodnota": 0,
          "improvizace": 1,
          "nastroj": 2,
          "obrana": 4,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "kowalski",
        "karta_id": "kanystr-benzinu",
        "staty": {
          "hodnota": 1,
          "improvizace": 2,
          "nastroj": 4,
          "obrana": 1,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "mazur",
        "karta_id": "bananovy-kanon",
        "staty": {
          "hodnota": 0,
          "improvizace": 4,
          "nastroj": 1,
          "obrana": 1,
          "utok": 2,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "fontana",
        "karta_id": "gumovy-vacek",
        "staty": {
          "hodnota": 0,
          "improvizace": 3,
          "nastroj": 2,
          "obrana": 1,
          "utok": 0,
        },
        "stitky": [],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 7,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 1,
      },
      {
        "hrac_id": "kowalski",
        "pocet": 1,
      },
      {
        "hrac_id": "mazur",
        "pocet": 1,
      },
      {
        "hrac_id": "fontana",
        "pocet": 1,
      },
    ],
    "seq": 74,
    "type": "commit",
  },
  {
    "nodeIndex": 7,
    "seq": 75,
    "sloty": [
      {
        "kotva": 3,
        "prah": 3,
        "role": "Věrohodný list",
        "slot_index": 0,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Dorazit razítko",
        "slot_index": 1,
        "stat": "nastroj",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 2,
        "role": "Něco navíc",
        "slot_index": 2,
        "stat": "hodnota",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Ani nemrknout",
        "slot_index": 3,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "npc",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 7,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "pytel-brambor",
        "slot_index": 3,
      },
      {
        "hrac_id": "kowalski",
        "karta_id": "kanystr-benzinu",
        "slot_index": 1,
      },
      {
        "hrac_id": "mazur",
        "karta_id": "bananovy-kanon",
        "slot_index": 0,
      },
      {
        "hrac_id": "fontana",
        "karta_id": "gumovy-vacek",
        "slot_index": 2,
      },
    ],
    "seq": 76,
    "souhlasili": [
      "bartos",
      "kowalski",
      "mazur",
      "fontana",
    ],
    "type": "assignment",
  },
  {
    "duvod": "proslo",
    "hrac_id": "mazur",
    "karta_id": "bananovy-kanon",
    "nodeIndex": 7,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 77,
    "slot_index": 0,
    "stat": "improvizace",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "kowalski",
    "karta_id": "kanystr-benzinu",
    "nodeIndex": 7,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 78,
    "slot_index": 1,
    "stat": "nastroj",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "fontana",
    "karta_id": "gumovy-vacek",
    "nodeIndex": 7,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 79,
    "slot_index": 2,
    "stat": "hodnota",
    "stat_hodnota": 0,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": false,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "pytel-brambor",
    "nodeIndex": 7,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 80,
    "slot_index": 3,
    "stat": "obrana",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": true,
  },
  {
    "gap": 0,
    "max_achievable_band": "3/4_HLADCE",
    "max_achievable_zasahy": 3,
    "naklad_ztrata": 0,
    "nodeIndex": 7,
    "pasmo": "3/4_HLADCE",
    "seq": 81,
    "type": "band_resolved",
    "zasahy": 3,
    "zbyva_beden": 5,
  },
  {
    "delta": 1,
    "duvod": "hladce",
    "nodeIndex": 7,
    "seq": 82,
    "type": "credit_flow",
    "zustatek": 11,
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "deputy-hlidka",
        "typ_mista": "npc",
      },
      {
        "ref": "most-prohnila-prkna",
        "typ_mista": "lokace",
      },
    ],
    "nodeIndex": 8,
    "seq": 83,
    "type": "map_move",
  },
  {
    "nodeIndex": 8,
    "seq": 84,
    "typ_mista": "npc",
    "type": "map_move",
    "volba": "deputy-hlidka",
  },
  {
    "nevidi": [],
    "nodeIndex": 8,
    "seq": 85,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "obrana",
        },
        {
          "slot_index": 1,
          "stat": "hodnota",
        },
        {
          "slot_index": 2,
          "stat": "nastroj",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "obrana",
        },
        {
          "slot_index": 1,
          "stat": "hodnota",
        },
        {
          "slot_index": 2,
          "stat": "nastroj",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "kozena-zastera",
        "staty": {
          "hodnota": 0,
          "improvizace": 1,
          "nastroj": 2,
          "obrana": 4,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "kowalski",
        "karta_id": "pajcr",
        "staty": {
          "hodnota": 0,
          "improvizace": 1,
          "nastroj": 4,
          "obrana": 1,
          "utok": 3,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "mazur",
        "karta_id": "provaz-a-kladka",
        "staty": {
          "hodnota": 0,
          "improvizace": 2,
          "nastroj": 4,
          "obrana": 1,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "fontana",
        "karta_id": "zednicka-lzice",
        "staty": {
          "hodnota": 0,
          "improvizace": 1,
          "nastroj": 4,
          "obrana": 1,
          "utok": 2,
        },
        "stitky": [],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 8,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 1,
      },
      {
        "hrac_id": "kowalski",
        "pocet": 1,
      },
      {
        "hrac_id": "mazur",
        "pocet": 1,
      },
      {
        "hrac_id": "fontana",
        "pocet": 1,
      },
    ],
    "seq": 86,
    "type": "commit",
  },
  {
    "nodeIndex": 8,
    "seq": 87,
    "sloty": [
      {
        "kotva": 3,
        "prah": 3,
        "role": "Nedat na sobě znát",
        "slot_index": 0,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 1,
        "role": "Na přilepšenou",
        "slot_index": 1,
        "stat": "hodnota",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 2,
        "role": "Spravit, co třeba",
        "slot_index": 2,
        "stat": "nastroj",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 3,
        "role": "Kdyby tasil první",
        "slot_index": 3,
        "stat": "utok",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "npc",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 8,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "kozena-zastera",
        "slot_index": 0,
      },
      {
        "hrac_id": "kowalski",
        "karta_id": "pajcr",
        "slot_index": 3,
      },
      {
        "hrac_id": "mazur",
        "karta_id": "provaz-a-kladka",
        "slot_index": 2,
      },
      {
        "hrac_id": "fontana",
        "karta_id": "zednicka-lzice",
        "slot_index": 1,
      },
    ],
    "seq": 88,
    "souhlasili": [
      "bartos",
      "kowalski",
      "mazur",
      "fontana",
    ],
    "type": "assignment",
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "kozena-zastera",
    "nodeIndex": 8,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 89,
    "slot_index": 0,
    "stat": "obrana",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "fontana",
    "karta_id": "zednicka-lzice",
    "nodeIndex": 8,
    "prah": 1,
    "pronasledovatel_efekt": null,
    "seq": 90,
    "slot_index": 1,
    "stat": "hodnota",
    "stat_hodnota": 0,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": false,
  },
  {
    "duvod": "proslo",
    "hrac_id": "mazur",
    "karta_id": "provaz-a-kladka",
    "nodeIndex": 8,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 91,
    "slot_index": 2,
    "stat": "nastroj",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "kowalski",
    "karta_id": "pajcr",
    "nodeIndex": 8,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 92,
    "slot_index": 3,
    "stat": "utok",
    "stat_hodnota": 3,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": true,
  },
  {
    "gap": 0,
    "max_achievable_band": "3/4_HLADCE",
    "max_achievable_zasahy": 3,
    "naklad_ztrata": 0,
    "nodeIndex": 8,
    "pasmo": "3/4_HLADCE",
    "seq": 93,
    "type": "band_resolved",
    "zasahy": 3,
    "zbyva_beden": 5,
  },
  {
    "delta": 1,
    "duvod": "hladce",
    "nodeIndex": 8,
    "seq": 94,
    "type": "credit_flow",
    "zustatek": 12,
  },
  {
    "cil_id": "bez-jizvy",
    "hrac_id": "bartos",
    "nodeIndex": 8,
    "overeni_typ": "mechanicky",
    "seq": 95,
    "splnen": true,
    "type": "goal_scored",
  },
  {
    "cil_id": "kupecke-slovo",
    "hrac_id": "kowalski",
    "nodeIndex": 8,
    "overeni_typ": "mechanicky",
    "seq": 96,
    "splnen": true,
    "type": "goal_scored",
  },
  {
    "cil_id": "muj-den",
    "hrac_id": "mazur",
    "nodeIndex": 8,
    "overeni_typ": "mechanicky",
    "seq": 97,
    "splnen": true,
    "type": "goal_scored",
  },
  {
    "cil_id": "dve-jizvy",
    "hrac_id": "fontana",
    "nodeIndex": 8,
    "overeni_typ": "mechanicky",
    "seq": 98,
    "splnen": false,
    "type": "goal_scored",
  },
  {
    "cile": [
      {
        "body": 2,
        "cil": "bez-jizvy",
        "postava": "bartos",
        "splnen": true,
        "textovy": false,
      },
      {
        "body": 2,
        "cil": "kupecke-slovo",
        "postava": "kowalski",
        "splnen": true,
        "textovy": false,
      },
      {
        "body": 2,
        "cil": "muj-den",
        "postava": "mazur",
        "splnen": true,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "dve-jizvy",
        "postava": "fontana",
        "splnen": false,
        "textovy": false,
      },
    ],
    "konecny_zar": 9,
    "kredity_zbytek": 12,
    "nodeIndex": 8,
    "pocet_uzlu": 7,
    "pricina": "dojezd",
    "seq": 99,
    "type": "run_ended",
    "vysledek": "DORUCENO",
    "zbyva_beden": 5,
  },
]
`;

exports[`v3 golden runy nad reálným obsahem > seed 42, kompetentni, 1 hráč, Malone 1`] = `
[
  {
    "cile": [
      {
        "cil": "cista-ruka",
        "hrac_id": "bartos",
      },
    ],
    "loadout": [
      [],
    ],
    "nodeIndex": 0,
    "pocetHracu": 1,
    "pronasledovatel": "agent-malone",
    "ruce": [
      {
        "hrac_id": "bartos",
        "karty": [
          "bananovy-kanon",
          "zlate-hodinky",
          "svarecka",
          "stary-kompas",
          "sekacek-na-led",
          "konselov-prsten",
        ],
        "velikost": 6,
      },
    ],
    "rusi": {
      "cil": "hodnota",
      "typ": "stat",
    },
    "seed": 42,
    "seq": 1,
    "startBeden": 6,
    "startKreditu": 0,
    "startZar": 0,
    "type": "run_started",
    "verzeObsahu": "bc2bd34c",
    "verzePravidel": "v0.3 / prototyp-mvp.md 2026-07-23 (slotová resoluce v3; výchozí čísla — ladit simulací)",
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "rival-prepad",
        "typ_mista": "npc",
      },
      {
        "ref": "nadrazi-vypravci",
        "typ_mista": "npc",
      },
    ],
    "nodeIndex": 1,
    "seq": 2,
    "type": "map_move",
  },
  {
    "nodeIndex": 1,
    "seq": 3,
    "typ_mista": "npc",
    "type": "map_move",
    "volba": "rival-prepad",
  },
  {
    "nevidi": [],
    "nodeIndex": 1,
    "seq": 4,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "utok",
        },
        {
          "slot_index": 1,
          "stat": "obrana",
        },
        {
          "slot_index": 2,
          "stat": "improvizace",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "utok",
        },
        {
          "slot_index": 1,
          "stat": "obrana",
        },
        {
          "slot_index": 2,
          "stat": "improvizace",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "bananovy-kanon",
        "staty": {
          "hodnota": 0,
          "improvizace": 4,
          "nastroj": 1,
          "obrana": 1,
          "utok": 2,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "stary-kompas",
        "staty": {
          "hodnota": 1,
          "improvizace": 3,
          "nastroj": 3,
          "obrana": 1,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "zlate-hodinky",
        "staty": {
          "hodnota": 5,
          "improvizace": 2,
          "nastroj": 1,
          "obrana": 1,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "sekacek-na-led",
        "staty": {
          "hodnota": 0,
          "improvizace": 2,
          "nastroj": 2,
          "obrana": 1,
          "utok": 4,
        },
        "stitky": [],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 1,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 4,
      },
    ],
    "seq": 5,
    "type": "commit",
  },
  {
    "nodeIndex": 1,
    "seq": 6,
    "sloty": [
      {
        "kotva": 4,
        "prah": 3,
        "role": "Postavit se jim",
        "slot_index": 0,
        "stat": "utok",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 2,
        "role": "Ustát nápor",
        "slot_index": 1,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 2,
        "role": "Vyklouznout stranou",
        "slot_index": 2,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 3,
        "role": "Tasit včas a první",
        "slot_index": 3,
        "stat": "utok",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "npc",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 1,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "bananovy-kanon",
        "slot_index": 0,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "stary-kompas",
        "slot_index": 2,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "zlate-hodinky",
        "slot_index": 1,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "sekacek-na-led",
        "slot_index": 3,
      },
    ],
    "seq": 7,
    "souhlasili": [
      "bartos",
    ],
    "type": "assignment",
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "bartos",
    "karta_id": "bananovy-kanon",
    "nodeIndex": 1,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 8,
    "slot_index": 0,
    "stat": "utok",
    "stat_hodnota": 2,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": false,
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "bartos",
    "karta_id": "zlate-hodinky",
    "nodeIndex": 1,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 9,
    "slot_index": 1,
    "stat": "obrana",
    "stat_hodnota": 1,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": false,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "stary-kompas",
    "nodeIndex": 1,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 10,
    "slot_index": 2,
    "stat": "improvizace",
    "stat_hodnota": 3,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "sekacek-na-led",
    "nodeIndex": 1,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 11,
    "slot_index": 3,
    "stat": "utok",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": true,
  },
  {
    "gap": 0,
    "max_achievable_band": "2/4_S_NASLEDKY",
    "max_achievable_zasahy": 2,
    "naklad_ztrata": 0,
    "nodeIndex": 1,
    "pasmo": "2/4_S_NASLEDKY",
    "seq": 12,
    "type": "band_resolved",
    "zasahy": 2,
    "zbyva_beden": 6,
  },
  {
    "delta": 1,
    "duvod": "hlucne_utok",
    "nodeIndex": 1,
    "nova_pozice": 1,
    "prah_prekrocen": null,
    "seq": 13,
    "type": "zar_move",
  },
  {
    "delta": 1,
    "duvod": "s_nasledky",
    "nodeIndex": 1,
    "nova_pozice": 2,
    "prah_prekrocen": null,
    "seq": 14,
    "type": "zar_move",
  },
  {
    "aktivnich_po": 1,
    "efekt": {
      "druh": "hide_telegraf",
    },
    "hrac_id": "bartos",
    "kategorie": "informacni",
    "nodeIndex": 1,
    "postih_id": "zvoneni-v-usich",
    "pricina": "2/4_S_NASLEDKY",
    "seq": 15,
    "tier": "lehky",
    "type": "penalty_added",
    "vyprsi_za": 2,
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "rival-parley",
        "typ_mista": "npc",
      },
      {
        "ref": "privoz-celnik",
        "typ_mista": "npc",
      },
    ],
    "nodeIndex": 2,
    "seq": 16,
    "type": "map_move",
  },
  {
    "nodeIndex": 2,
    "seq": 17,
    "typ_mista": "npc",
    "type": "map_move",
    "volba": "privoz-celnik",
  },
  {
    "nevidi": [
      "bartos",
    ],
    "nodeIndex": 2,
    "seq": 18,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
        {
          "slot_index": 2,
          "stat": "hodnota",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
        {
          "slot_index": 2,
          "stat": "hodnota",
        },
      ],
      "zbran_projde": "jen_skryte",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "svarecka",
        "staty": {
          "hodnota": 1,
          "improvizace": 1,
          "nastroj": 5,
          "obrana": 1,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "konev-na-mleko",
        "staty": {
          "hodnota": 1,
          "improvizace": 4,
          "nastroj": 2,
          "obrana": 1,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "plechova-vesta",
        "staty": {
          "hodnota": 0,
          "improvizace": 0,
          "nastroj": 1,
          "obrana": 5,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "bedna-kanadske",
        "staty": {
          "hodnota": 4,
          "improvizace": 1,
          "nastroj": 1,
          "obrana": 1,
          "utok": 1,
        },
        "stitky": [],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 2,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 4,
      },
    ],
    "seq": 19,
    "type": "commit",
  },
  {
    "nodeIndex": 2,
    "seq": 20,
    "sloty": [
      {
        "kotva": 3,
        "prah": 3,
        "role": "Zamotat hlavu",
        "slot_index": 0,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Přesunout z očí",
        "slot_index": 1,
        "stat": "nastroj",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 2,
        "role": "Přilepšit do dlaně",
        "slot_index": 2,
        "stat": "hodnota",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 3,
        "role": "Kdyby čenichal dál",
        "slot_index": 3,
        "stat": "utok",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "npc",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 2,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "svarecka",
        "slot_index": 1,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "konev-na-mleko",
        "slot_index": 0,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "plechova-vesta",
        "slot_index": 2,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "bedna-kanadske",
        "slot_index": 3,
      },
    ],
    "seq": 21,
    "souhlasili": [
      "bartos",
    ],
    "type": "assignment",
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "konev-na-mleko",
    "nodeIndex": 2,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 22,
    "slot_index": 0,
    "stat": "improvizace",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "svarecka",
    "nodeIndex": 2,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 23,
    "slot_index": 1,
    "stat": "nastroj",
    "stat_hodnota": 5,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "stat_zrusen",
    "hrac_id": "bartos",
    "karta_id": "plechova-vesta",
    "nodeIndex": 2,
    "prah": 2,
    "pronasledovatel_efekt": {
      "cil": "hodnota",
      "typ": "stat",
    },
    "seq": 24,
    "slot_index": 2,
    "stat": "hodnota",
    "stat_hodnota": 0,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": false,
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "bartos",
    "karta_id": "bedna-kanadske",
    "nodeIndex": 2,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 25,
    "slot_index": 3,
    "stat": "utok",
    "stat_hodnota": 1,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": false,
  },
  {
    "gap": 0,
    "max_achievable_band": "2/4_S_NASLEDKY",
    "max_achievable_zasahy": 2,
    "naklad_ztrata": 0,
    "nodeIndex": 2,
    "pasmo": "2/4_S_NASLEDKY",
    "seq": 26,
    "type": "band_resolved",
    "zasahy": 2,
    "zbyva_beden": 6,
  },
  {
    "delta": 1,
    "duvod": "s_nasledky",
    "nodeIndex": 2,
    "nova_pozice": 3,
    "prah_prekrocen": null,
    "seq": 27,
    "type": "zar_move",
  },
  {
    "aktivnich_po": 0,
    "efekt": {
      "druh": "ztrata_naklad",
      "kolik": 1,
    },
    "hrac_id": "bartos",
    "kategorie": "ztratovy",
    "nodeIndex": 2,
    "postih_id": "vysypana-bedna",
    "pricina": "2/4_S_NASLEDKY",
    "seq": 28,
    "tier": "lehky",
    "type": "penalty_added",
    "vyprsi_za": "ihned",
  },
  {
    "duvod": "cas",
    "hrac_id": "bartos",
    "nodeIndex": 2,
    "postih_id": "zvoneni-v-usich",
    "seq": 29,
    "type": "penalty_expired",
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "truhla-preklad",
        "typ_mista": "truhla",
      },
      {
        "ref": "truhla-utopenec",
        "typ_mista": "truhla",
      },
    ],
    "nodeIndex": 3,
    "seq": 30,
    "type": "map_move",
  },
  {
    "nodeIndex": 3,
    "seq": 31,
    "typ_mista": "truhla",
    "type": "map_move",
    "volba": "truhla-utopenec",
  },
  {
    "delta": 4,
    "duvod": "truhla",
    "nodeIndex": 3,
    "seq": 32,
    "type": "credit_flow",
    "zustatek": 4,
  },
  {
    "motel_odbocka": {
      "volba": "dal",
    },
    "nodeIndex": 3,
    "seq": 33,
    "type": "map_move",
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "nadrazi-vypravci",
        "typ_mista": "npc",
      },
      {
        "ref": "nadrazi-noc",
        "typ_mista": "lokace",
      },
    ],
    "nodeIndex": 4,
    "seq": 34,
    "type": "map_move",
  },
  {
    "nodeIndex": 4,
    "seq": 35,
    "typ_mista": "lokace",
    "type": "map_move",
    "volba": "nadrazi-noc",
  },
  {
    "nevidi": [],
    "nodeIndex": 4,
    "seq": 36,
    "signal_pravy": {
      "proti_srsti": 2,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
      ],
      "zbran_projde": "ano",
    },
    "signal_vyslany": {
      "proti_srsti": 2,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
      ],
      "zbran_projde": "ano",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "lopata",
        "staty": {
          "hodnota": 0,
          "improvizace": 1,
          "nastroj": 4,
          "obrana": 1,
          "utok": 3,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "knezsky-kolarek",
        "staty": {
          "hodnota": 1,
          "improvizace": 4,
          "nastroj": 0,
          "obrana": 2,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "pytel-cementu",
        "staty": {
          "hodnota": 1,
          "improvizace": 2,
          "nastroj": 1,
          "obrana": 3,
          "utok": 3,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "reznicky-hak",
        "staty": {
          "hodnota": 1,
          "improvizace": 1,
          "nastroj": 2,
          "obrana": 1,
          "utok": 4,
        },
        "stitky": [],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 4,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 4,
      },
    ],
    "seq": 37,
    "type": "commit",
  },
  {
    "nodeIndex": 4,
    "seq": 38,
    "sloty": [
      {
        "kotva": 2,
        "prah": 1,
        "role": "Proklouznout kolem",
        "slot_index": 0,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Vypáčit vagon",
        "slot_index": 1,
        "stat": "nastroj",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 3,
        "role": "Ztuhnout ve stínu",
        "slot_index": 2,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
      {
        "kotva": 3,
        "prah": 2,
        "role": "Kdyby se probudil",
        "slot_index": 3,
        "stat": "utok",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "lokace",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 4,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "lopata",
        "slot_index": 1,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "knezsky-kolarek",
        "slot_index": 0,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "pytel-cementu",
        "slot_index": 2,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "reznicky-hak",
        "slot_index": 3,
      },
    ],
    "seq": 39,
    "souhlasili": [
      "bartos",
    ],
    "type": "assignment",
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "knezsky-kolarek",
    "nodeIndex": 4,
    "prah": 1,
    "pronasledovatel_efekt": null,
    "seq": 40,
    "slot_index": 0,
    "stat": "improvizace",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "lopata",
    "nodeIndex": 4,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 41,
    "slot_index": 1,
    "stat": "nastroj",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "pytel-cementu",
    "nodeIndex": 4,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 42,
    "slot_index": 2,
    "stat": "obrana",
    "stat_hodnota": 3,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "reznicky-hak",
    "nodeIndex": 4,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 43,
    "slot_index": 3,
    "stat": "utok",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": true,
  },
  {
    "gap": 0,
    "max_achievable_band": "4/4_HLADCE_LOOT",
    "max_achievable_zasahy": 4,
    "naklad_ztrata": 0,
    "nodeIndex": 4,
    "pasmo": "4/4_HLADCE_LOOT",
    "seq": 44,
    "type": "band_resolved",
    "zasahy": 4,
    "zbyva_beden": 5,
  },
  {
    "delta": 1,
    "duvod": "hlucne_utok",
    "nodeIndex": 4,
    "nova_pozice": 4,
    "prah_prekrocen": null,
    "seq": 45,
    "type": "zar_move",
  },
  {
    "delta": 2,
    "duvod": "hladce_loot",
    "nodeIndex": 4,
    "seq": 46,
    "type": "credit_flow",
    "zustatek": 6,
  },
  {
    "byl_zatah": true,
    "nabidnuto": [
      {
        "ref": "zatah",
        "typ_mista": "zatah",
      },
    ],
    "nodeIndex": 5,
    "seq": 47,
    "type": "map_move",
  },
  {
    "nodeIndex": 5,
    "seq": 48,
    "typ_mista": "zatah",
    "type": "map_move",
    "volba": "zatah",
  },
  {
    "nevidi": [],
    "nodeIndex": 5,
    "seq": 49,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "utok",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
        {
          "slot_index": 2,
          "stat": "improvizace",
        },
      ],
      "zbran_projde": "ano",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "utok",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
        {
          "slot_index": 2,
          "stat": "improvizace",
        },
      ],
      "zbran_projde": "ano",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "mosazny-boxer",
        "staty": {
          "hodnota": 0,
          "improvizace": 1,
          "nastroj": 1,
          "obrana": 2,
          "utok": 4,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "pytel-brambor",
        "staty": {
          "hodnota": 0,
          "improvizace": 1,
          "nastroj": 2,
          "obrana": 4,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "kozena-zastera",
        "staty": {
          "hodnota": 0,
          "improvizace": 1,
          "nastroj": 2,
          "obrana": 4,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "zpev-opilce",
        "staty": {
          "hodnota": 0,
          "improvizace": 3,
          "nastroj": 0,
          "obrana": 2,
          "utok": 0,
        },
        "stitky": [],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 5,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 4,
      },
    ],
    "seq": 50,
    "type": "commit",
  },
  {
    "nodeIndex": 5,
    "seq": 51,
    "sloty": [
      {
        "kotva": 4,
        "prah": 4,
        "role": "Prorazit blokádu",
        "slot_index": 0,
        "stat": "utok",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Strhnout do postranní",
        "slot_index": 1,
        "stat": "nastroj",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 2,
        "role": "Zmizet v ulicích",
        "slot_index": 2,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Držet nervy u okna",
        "slot_index": 3,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "zatah",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 5,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "mosazny-boxer",
        "slot_index": 0,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "pytel-brambor",
        "slot_index": 3,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "kozena-zastera",
        "slot_index": 1,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "zpev-opilce",
        "slot_index": 2,
      },
    ],
    "seq": 52,
    "souhlasili": [
      "bartos",
    ],
    "type": "assignment",
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "mosazny-boxer",
    "nodeIndex": 5,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 53,
    "slot_index": 0,
    "stat": "utok",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "bartos",
    "karta_id": "kozena-zastera",
    "nodeIndex": 5,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 54,
    "slot_index": 1,
    "stat": "nastroj",
    "stat_hodnota": 2,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": false,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "zpev-opilce",
    "nodeIndex": 5,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 55,
    "slot_index": 2,
    "stat": "improvizace",
    "stat_hodnota": 3,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "pytel-brambor",
    "nodeIndex": 5,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 56,
    "slot_index": 3,
    "stat": "obrana",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": true,
  },
  {
    "gap": 0,
    "max_achievable_band": "3/4_HLADCE",
    "max_achievable_zasahy": 3,
    "naklad_ztrata": 0,
    "nodeIndex": 5,
    "pasmo": "3/4_HLADCE",
    "seq": 57,
    "type": "band_resolved",
    "zasahy": 3,
    "zbyva_beden": 5,
  },
  {
    "delta": 1,
    "duvod": "hlucne_utok",
    "nodeIndex": 5,
    "nova_pozice": 5,
    "prah_prekrocen": null,
    "seq": 58,
    "type": "zar_move",
  },
  {
    "delta": 1,
    "duvod": "hladce",
    "nodeIndex": 5,
    "seq": 59,
    "type": "credit_flow",
    "zustatek": 7,
  },
  {
    "motel_odbocka": {
      "volba": "dal",
    },
    "nodeIndex": 5,
    "seq": 60,
    "type": "map_move",
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "rival-parley",
        "typ_mista": "npc",
      },
      {
        "ref": "mesto-houkacky",
        "typ_mista": "lokace",
      },
    ],
    "nodeIndex": 6,
    "seq": 61,
    "type": "map_move",
  },
  {
    "nodeIndex": 6,
    "seq": 62,
    "typ_mista": "lokace",
    "type": "map_move",
    "volba": "mesto-houkacky",
  },
  {
    "nevidi": [],
    "nodeIndex": 6,
    "seq": 63,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
        {
          "slot_index": 2,
          "stat": "improvizace",
        },
      ],
      "zbran_projde": "ano",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": "nastroj",
        },
        {
          "slot_index": 2,
          "stat": "improvizace",
        },
      ],
      "zbran_projde": "ano",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "hovezi-vyvar",
        "staty": {
          "hodnota": 1,
          "improvizace": 4,
          "nastroj": 1,
          "obrana": 2,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "rezervni-pneu",
        "staty": {
          "hodnota": 0,
          "improvizace": 2,
          "nastroj": 4,
          "obrana": 2,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "otrleny-vyraz",
        "staty": {
          "hodnota": 1,
          "improvizace": 2,
          "nastroj": 0,
          "obrana": 4,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "dedeckova-brokovnice",
        "staty": {
          "hodnota": 1,
          "improvizace": 1,
          "nastroj": 1,
          "obrana": 2,
          "utok": 5,
        },
        "stitky": [
          "GANGSTER",
        ],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 6,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 4,
      },
    ],
    "seq": 64,
    "type": "commit",
  },
  {
    "nodeIndex": 6,
    "seq": 65,
    "sloty": [
      {
        "kotva": 2,
        "prah": 1,
        "role": "Splynout s davem",
        "slot_index": 0,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 4,
        "role": "Zajet do postranní",
        "slot_index": 1,
        "stat": "nastroj",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 2,
        "role": "Zahodit stopu",
        "slot_index": 2,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 2,
        "role": "Klid v návalu",
        "slot_index": 3,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "lokace",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 6,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "hovezi-vyvar",
        "slot_index": 2,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "rezervni-pneu",
        "slot_index": 1,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "otrleny-vyraz",
        "slot_index": 3,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "dedeckova-brokovnice",
        "slot_index": 0,
      },
    ],
    "seq": 66,
    "souhlasili": [
      "bartos",
    ],
    "type": "assignment",
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "dedeckova-brokovnice",
    "nodeIndex": 6,
    "prah": 1,
    "pronasledovatel_efekt": null,
    "seq": 67,
    "slot_index": 0,
    "stat": "improvizace",
    "stat_hodnota": 1,
    "stitek_efekt": null,
    "stitky": [
      "GANGSTER",
    ],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "rezervni-pneu",
    "nodeIndex": 6,
    "prah": 4,
    "pronasledovatel_efekt": null,
    "seq": 68,
    "slot_index": 1,
    "stat": "nastroj",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "hovezi-vyvar",
    "nodeIndex": 6,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 69,
    "slot_index": 2,
    "stat": "improvizace",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "otrleny-vyraz",
    "nodeIndex": 6,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 70,
    "slot_index": 3,
    "stat": "obrana",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": true,
  },
  {
    "gap": 0,
    "max_achievable_band": "4/4_HLADCE_LOOT",
    "max_achievable_zasahy": 4,
    "naklad_ztrata": 0,
    "nodeIndex": 6,
    "pasmo": "4/4_HLADCE_LOOT",
    "seq": 71,
    "type": "band_resolved",
    "zasahy": 4,
    "zbyva_beden": 5,
  },
  {
    "delta": 1,
    "duvod": "hlucne_GANGSTER",
    "nodeIndex": 6,
    "nova_pozice": 6,
    "prah_prekrocen": null,
    "seq": 72,
    "type": "zar_move",
  },
  {
    "delta": 2,
    "duvod": "hladce_loot",
    "nodeIndex": 6,
    "seq": 73,
    "type": "credit_flow",
    "zustatek": 9,
  },
  {
    "byl_zatah": false,
    "nabidnuto": [
      {
        "ref": "deputy-mytnice",
        "typ_mista": "npc",
      },
      {
        "ref": "farmar-stodola",
        "typ_mista": "lokace",
      },
    ],
    "nodeIndex": 7,
    "seq": 74,
    "type": "map_move",
  },
  {
    "nodeIndex": 7,
    "seq": 75,
    "typ_mista": "lokace",
    "type": "map_move",
    "volba": "farmar-stodola",
  },
  {
    "nevidi": [],
    "nodeIndex": 7,
    "seq": 76,
    "signal_pravy": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": [
            "nastroj",
            "improvizace",
          ],
        },
        {
          "slot_index": 2,
          "stat": "nastroj",
        },
      ],
      "zbran_projde": "ano",
    },
    "signal_vyslany": {
      "proti_srsti": 1,
      "trend": [
        {
          "slot_index": 0,
          "stat": "improvizace",
        },
        {
          "slot_index": 1,
          "stat": [
            "nastroj",
            "improvizace",
          ],
        },
        {
          "slot_index": 2,
          "stat": "nastroj",
        },
      ],
      "zbran_projde": "ano",
    },
    "type": "telegraf_derived",
  },
  {
    "commit": [
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "provaz-a-kladka",
        "staty": {
          "hodnota": 0,
          "improvizace": 2,
          "nastroj": 4,
          "obrana": 1,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "rodinne-stribro",
        "staty": {
          "hodnota": 4,
          "improvizace": 1,
          "nastroj": 1,
          "obrana": 2,
          "utok": 0,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "medvedi-kozich",
        "staty": {
          "hodnota": 1,
          "improvizace": 1,
          "nastroj": 1,
          "obrana": 4,
          "utok": 1,
        },
        "stitky": [],
      },
      {
        "dobrovolna": true,
        "hrac_id": "bartos",
        "karta_id": "konselov-prsten",
        "staty": {
          "hodnota": 5,
          "improvizace": 1,
          "nastroj": 0,
          "obrana": 2,
          "utok": 0,
        },
        "stitky": [],
      },
    ],
    "drzitel_mapy": null,
    "nodeIndex": 7,
    "rozdeleni": [
      {
        "hrac_id": "bartos",
        "pocet": 4,
      },
    ],
    "seq": 77,
    "type": "commit",
  },
  {
    "nodeIndex": 7,
    "seq": 78,
    "sloty": [
      {
        "kotva": 3,
        "prah": 3,
        "role": "Utišit psy",
        "slot_index": 0,
        "stat": "improvizace",
        "stitek_citlivy": null,
        "sum": 0,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 1,
        "role": "Zaklínit vrata",
        "slot_index": 1,
        "stat": [
          "nastroj",
          "improvizace",
        ],
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "kombi_oba",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 3,
        "prah": 2,
        "role": "Schovat bednu do sena",
        "slot_index": 2,
        "stat": "nastroj",
        "stitek_citlivy": null,
        "sum": -1,
        "typ_prahu": "jednostat",
        "viditelnost": "viditelna",
      },
      {
        "kotva": 2,
        "prah": 3,
        "role": "Nedýchat, když jde kolem",
        "slot_index": 3,
        "stat": "obrana",
        "stitek_citlivy": null,
        "sum": 1,
        "typ_prahu": "jednostat",
        "viditelnost": "skryta",
      },
    ],
    "typ_mista": "lokace",
    "type": "situation_revealed",
  },
  {
    "navrhl": "bartos",
    "nodeIndex": 7,
    "pocet_preskladani": 0,
    "prirazeni": [
      {
        "hrac_id": "bartos",
        "karta_id": "provaz-a-kladka",
        "slot_index": 2,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "rodinne-stribro",
        "slot_index": 1,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "medvedi-kozich",
        "slot_index": 3,
      },
      {
        "hrac_id": "bartos",
        "karta_id": "konselov-prsten",
        "slot_index": 0,
      },
    ],
    "seq": 79,
    "souhlasili": [
      "bartos",
    ],
    "type": "assignment",
  },
  {
    "duvod": "nizky_stat",
    "hrac_id": "bartos",
    "karta_id": "konselov-prsten",
    "nodeIndex": 7,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 80,
    "slot_index": 0,
    "stat": "improvizace",
    "stat_hodnota": 1,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": false,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "rodinne-stribro",
    "nodeIndex": 7,
    "prah": 1,
    "pronasledovatel_efekt": null,
    "seq": 81,
    "slot_index": 1,
    "stat": [
      "nastroj",
      "improvizace",
    ],
    "stat_hodnota": [
      1,
      1,
    ],
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "kombi_oba",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "provaz-a-kladka",
    "nodeIndex": 7,
    "prah": 2,
    "pronasledovatel_efekt": null,
    "seq": 82,
    "slot_index": 2,
    "stat": "nastroj",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "viditelna",
    "zasah": true,
  },
  {
    "duvod": "proslo",
    "hrac_id": "bartos",
    "karta_id": "medvedi-kozich",
    "nodeIndex": 7,
    "prah": 3,
    "pronasledovatel_efekt": null,
    "seq": 83,
    "slot_index": 3,
    "stat": "obrana",
    "stat_hodnota": 4,
    "stitek_efekt": null,
    "stitky": [],
    "typ_prahu": "jednostat",
    "type": "slot_resolved",
    "viditelnost": "skryta",
    "zasah": true,
  },
  {
    "gap": 0,
    "max_achievable_band": "3/4_HLADCE",
    "max_achievable_zasahy": 3,
    "naklad_ztrata": 0,
    "nodeIndex": 7,
    "pasmo": "3/4_HLADCE",
    "seq": 84,
    "type": "band_resolved",
    "zasahy": 3,
    "zbyva_beden": 5,
  },
  {
    "delta": 1,
    "duvod": "hladce",
    "nodeIndex": 7,
    "seq": 85,
    "type": "credit_flow",
    "zustatek": 10,
  },
  {
    "cil_id": "cista-ruka",
    "hrac_id": "bartos",
    "nodeIndex": 7,
    "overeni_typ": "mechanicky",
    "seq": 86,
    "splnen": false,
    "type": "goal_scored",
  },
  {
    "cile": [
      {
        "body": 0,
        "cil": "cista-ruka",
        "postava": "bartos",
        "splnen": false,
        "textovy": false,
      },
    ],
    "konecny_zar": 6,
    "kredity_zbytek": 10,
    "nodeIndex": 7,
    "pocet_uzlu": 7,
    "pricina": "dojezd",
    "seq": 87,
    "type": "run_ended",
    "vysledek": "DORUCENO",
    "zbyva_beden": 5,
  },
]
`;
